--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -3,7 +3,7 @@
 <title>Oficina G</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="/projetao.css" type="text/css" rel="stylesheet">
+<link href="projetao.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,11 +25,15 @@
 </center>
 </div>
 
-
+<center>
 <div id='div2' name='div2'>
-
+<br>
+<td><a href="cadastrarclientefisico.html" class="linkn">Cadastrar Cliente F&iacute;sico </a></td>
+<td><a href="cadastrarclientejuridico.html" class="linkn">Cadastrar Cliente Jur&iacute;dico </a></td>
+<td><a href="clientefisico.html" class="linkn">Listar Cliente F&iacute;sico </a></td>
+<td><a href="clientejuridico.html" class="linkn">Listar Cliente Jur&iacute;dico </a></td><br>
 </div>
-
+</center>
 <div id='div3' name='div3'>
 <center>
 <h3>Oficina G</h3>
