--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -16,8 +16,7 @@
 <a id='links' href="/veiculo">Ve&iacute;culos </a>
 <a id='links' href="/funcionario">Funcion&aacute;rios </a>
 <a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/fornecedor">Fornecedores </a>
-<a id='links' href="/pecas">Pe&ccedil;as </a>
+<a id='links' href="/peca">Pe&ccedil;as </a>
 <a id='links' href="/servico">Servi&ccedil;os </a>
 <a id='links' href="/endereco">Endere&ccedil;o </a>
 <a id='links' href="/historico">Hist&oacute;rico</a>
@@ -28,10 +27,14 @@
 <center>
 <div id='div2' name='div2'>
 <br>
-<td><a href="cadastrarclientefisico.html" class="linkn">Cadastrar Cliente F&iacute;sico </a></td>
-<td><a href="cadastrarclientejuridico.html" class="linkn">Cadastrar Cliente Jur&iacute;dico </a></td>
-<td><a href="clientefisico.html" class="linkn">Listar Cliente F&iacute;sico </a></td>
-<td><a href="clientejuridico.html" class="linkn">Listar Cliente Jur&iacute;dico </a></td><br>
+<table>
+    <tr>
+<td><a href="cadastrarclientefisico.html" class="linkn"> Cadastrar Cliente F&iacute;sico </a></td>
+<td><a href="cadastrarclientejuridico.html" class="linkn"> Cadastrar Cliente Jur&iacute;dico </a></td>
+<td><a href="clientefisico.html" class="linkn"> Listar Cliente F&iacute;sico </a></td>
+<td><a href="clientejuridico.html" class="linkn"> Listar Cliente Jur&iacute;dico </a></td><br>
+    </tr>
+</table>
 </div>
 </center>
 <div id='div3' name='div3'>
