--- a/src/main/resources/templates/funcionario.html
+++ b/src/main/resources/templates/funcionario.html
@@ -16,8 +16,7 @@
 <a id='links' href="/veiculo">Ve&iacute;culos </a>
 <a id='links' href="/funcionario">Funcion&aacute;rios </a>
 <a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/fornecedor">Fornecedores </a>
-<a id='links' href="/pecas">Pe&ccedil;as </a>
+<a id='links' href="/peca">Pe&ccedil;as </a>
 <a id='links' href="/servico">Servi&ccedil;os </a>
 <a id='links' href="/endereco">Endere&ccedil;o </a>
 <a id='links' href="/historico">Hist&oacute;rico</a>
@@ -39,12 +38,7 @@
 <th>Telefone</th>
 <th>Email</th>
 <th>CPF</th>
-<th>Estado</th>
-<th>Cidade</th>
-<th>Bairro</th>
-<th>Rua</th>
-<th>N&uacute;mero</th>
-<th>Complemento</th>
+<th>Endere&ccedil;o</th>
 <th colspan='2'>A&ccedil;&atilde;o</th>
 
 </tr>
@@ -56,12 +50,7 @@
 <td>{{cpf}}</td>
 
 {{#enderecos}}
-<td>{{estado}}</td>
-<td>{{cidade}}</td>
-<td>{{bairro}}</td>
-<td>{{rua}}</td>
-<td>{{numero}}</td>
-<td>{{complemento}}</td>
+<td>{{toString}}</td>
 {{/enderecos}}
 <td><a href="/funcionarioedit/{{id}}" class="views">Editar</a></td>
 <td><a href="/funcionariodelete/{{id}}" class="views">Remover</a></td>
