--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,7 @@
 <a id='links' href="/veiculo">Ve&iacute;culos </a>
 <a id='links' href="/funcionario">Funcion&aacute;rios </a>
 <a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/fornecedor">Fornecedores </a>
-<a id='links' href="/pecas">Pe&ccedil;as </a>
+<a id='links' href="/peca">Pe&ccedil;as </a>
 <a id='links' href="/servico">Servi&ccedil;os </a>
 <a id='links' href="/endereco">Endere&ccedil;o </a>
 <a id='links' href="/historico">Hist&oacute;rico</a>
