--- a/src/main/resources/templates/funcionario.html
+++ b/src/main/resources/templates/funcionario.html
@@ -1,72 +1,72 @@
 <html>
-<head>
-<title>Oficina G</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="projetao.css" type="text/css" rel="stylesheet">
-</head>
+    <head>
+        <title>Oficina G</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="projetao.css" type="text/css" rel="stylesheet">
+    </head>
 
-<body>
+    <body>
 
-<div id='div1' name='div1'>
-<h1 id='oficina'>Oficina Gambiarra</h1>
-<center>
-<div class="rotas">
-<a id='links' href="/">In&iacute;cio </a>
-<a id='links' href="/veiculo">Ve&iacute;culos </a>
-<a id='links' href="/funcionario">Funcion&aacute;rios </a>
-<a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/peca">Pe&ccedil;as </a>
-<a id='links' href="/servico">Servi&ccedil;os </a>
-<a id='links' href="/endereco">Endere&ccedil;o </a>
-<a id='links' href="/historico">Hist&oacute;rico</a>
-</div>
-</center>
-</div>
-<center>
-<div>
-<br>
-<td><a href="/funcionariocadastro" class="linkn">Cadastrar Funcion&aacute;rio</a></td>
-</div>
+        <div id='div1' name='div1'>
+            <h1 id='oficina'>Oficina Gambiarra</h1>
+            <center>
+                <div class="rotas">
+                    <a id='links' href="/">In&iacute;cio </a>
+                    <a id='links' href="/veiculo">Ve&iacute;culos </a>
+                    <a id='links' href="/funcionario">Funcion&aacute;rios </a>
+                    <a id='links' href="/cliente">Clientes </a>
+                    <a id='links' href="/peca">Pe&ccedil;as </a>
+                    <a id='links' href="/servico">Servi&ccedil;os </a>
+                    <a id='links' href="/endereco">Endere&ccedil;o </a>
+                    <a id='links' href="/historico">Hist&oacute;rico</a>
+                </div>
+            </center>
+        </div>
+    <center>
+        <div>
+            <br>
+            <td><a href="/funcionariocadastro" class="linkn">Cadastrar Funcion&aacute;rio</a></td>
+        </div>
 
-<div id='div2' name='div2'>
-<h2>Funcion&aacute;rios</h2>
-<table>
-<tr>
+        <div id='div2' name='div2'>
+            <h2>Funcion&aacute;rios</h2>
+            <table>
+                <tr>
 
-<th>Nome</th>
-<th>Telefone</th>
-<th>Email</th>
-<th>CPF</th>
-<th>Endere&ccedil;o</th>
-<th colspan='2'>A&ccedil;&atilde;o</th>
+                    <th>Nome</th>
+                    <th>Telefone</th>
+                    <th>Email</th>
+                    <th>CPF</th>
+                    <th>Endere&ccedil;o</th>
+                    <th colspan='2'>A&ccedil;&atilde;o</th>
 
-</tr>
-<tr>
-{{#funcionarios}}
-<td>{{nome}}</td>
-<td>{{telefone}}</td>
-<td>{{email}}</td>
-<td>{{cpf}}</td>
+                </tr>
 
-{{#enderecos}}
-<td>{{toString}}</td>
-{{/enderecos}}
-<td><a href="/funcionarioedit/{{id}}" class="views">Editar</a></td>
-<td><a href="/funcionariodelete/{{id}}" class="views">Remover</a></td>
+                {{#funcionarios}}
+                <tr>
 
-</tr>
-{{/funcionarios}}
+                    <td>{{nome}}</td>
+                    <td>{{telefone}}</td>
+                    <td>{{email}}</td>
+                    <td>{{cpf}}</td>
+                    <td>{{endereco.toString}}</td>
+                    <td><a href="/funcionarioedit/{{id}}" class="views">Editar</a></td>
+                    <td><a href="/funcionariodelete/{{id}}" class="views">Remover</a></td>
 
-</table>
-</div>
-</center>
-<div id='div3' name='div3'>
-<center>
-<h3>Oficina G</h3>
-<p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
-</center>
-</div>
+                </tr>
+                {{/funcionarios}}
+
+
+            </table>
+        </div>
+    </center>
+    <div id='div3' name='div3'>
+        <center>
+            <h3>Oficina G</h3>
+            <p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
+        </center>
+    </div>
 
 
 </body>
