--- a/src/main/resources/templates/clientefisicocadastro.html
+++ b/src/main/resources/templates/clientefisicocadastro.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="projetao.css" type="text/css" rel="stylesheet">
+        <script src="projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -26,11 +27,11 @@
         <br>
         <div id='div2' class="form">
             <div id="topo">
-                <h2>Cadastro de Funcion&aacute;rios</h2>
+                <h2>Cadastro de Cliente F&iacute;sico</h2>
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1" action="/funcionarioinsert/" method="post">
+                <form name = "form1" class="form1" action="/clienteinsert/f" method="post">
                     <table>
                         <tr>
                             <td class="normal">Nome: </td>
