--- a/src/main/resources/templates/clientejuridicocadastro.html
+++ b/src/main/resources/templates/clientejuridicocadastro.html
@@ -26,11 +26,11 @@
         <br>
         <div id='div2' class="form">
             <div id="topo">
-                <h2>Cadastro de Funcion&aacute;rios</h2>
+                <h2>Cadastro de Cliente Jur&iacute;dico</h2>
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1" action="/funcionarioinsert/" method="post">
+                <form name = "form1" class="form1" action="/clienteinsert/j" method="post">
                     <table>
                         <tr>
                             <td class="normal">Nome: </td>
@@ -54,9 +54,9 @@
                         </tr>
 
                         <tr>
-                            <td class="normal">CPF: </td>
+                            <td class="normal">CNPJ: </td>
                             <td class="normal">
-                                <input type="text" size="35" id="cpf" name="cpf" maxlength="11">
+                                <input type="text" size="35" id="cnpj" name="cnpj" maxlength="11">
                             </td>
                         </tr>
                         <tr>
