--- a/src/main/resources/templates/funcionario.html
+++ b/src/main/resources/templates/funcionario.html
@@ -18,7 +18,6 @@
                     <a id='links' href="/cliente">Clientes </a>
                     <a id='links' href="/peca">Pe&ccedil;as </a>
                     <a id='links' href="/servico">Servi&ccedil;os </a>
-                    <a id='links' href="/endereco">Endere&ccedil;o </a>
                     <a id='links' href="/historico">Hist&oacute;rico</a>
                 </div>
             </center>
@@ -51,7 +50,7 @@
                     <td>{{email}}</td>
                     <td>{{cpf}}</td>
                     <td>{{endereco.toString}}</td>
-                    <td><a href="/funcionarioedit/{{id}}" class="views">Editar</a></td>
+                    <td><a href="/funcionarioupdate/{{id}}" class="views">Editar</a></td>
                     <td><a href="/funcionariodelete/{{id}}" class="views">Remover</a></td>
 
                 </tr>
