--- a/src/main/resources/templates/veiculo.html
+++ b/src/main/resources/templates/veiculo.html
@@ -18,7 +18,6 @@
 <a id='links' href="/cliente">Clientes </a>
 <a id='links' href="/pecas">Pe&ccedil;as </a>
 <a id='links' href="/servico">Servi&ccedil;os </a>
-<a id='links' href="/endereco">Endere&ccedil;o </a>
 <a id='links' href="/historico">Hist&oacute;rico</a>
 </div>
 </center>
@@ -26,7 +25,7 @@
 <center>
 <div>
 <br>
-<td><a href="cadastrarveiculo.html" class="linkn">Cadastrar Ve&iacute;culo</a></td>
+<td><a href="/veiculocadastro" class="linkn">Cadastrar Ve&iacute;culo</a></td>
 </div>
 
 <div id='div2' name='div2'>
